--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/primaryDark"
+        android:layout_height="?attr/actionBarSize">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:fontFamily="@font/dancing"
+            android:text="@string/app_name"
+            android:layout_gravity="center"
+            android:textColor="@color/secondary"
+            android:textSize="30sp"
+
+
+            >
+
+        </TextView>
+    </FrameLayout>
+
+
 <androidx.fragment.app.FragmentContainerView
     android:id="@+id/fwView"
     android:name="androidx.navigation.fragment.NavHostFragment"
@@ -13,7 +38,7 @@
     android:layout_height="0dp"
     app:defaultNavHost="true"
     app:navGraph="@navigation/main_graph"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent">
