--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:fontFamily="@font/dancing"
+            style="@style/Title"
             android:text="@string/app_name"
             android:layout_gravity="center"
-            android:textColor="@color/secondary"
-            android:textSize="30sp"
-
-
             >
 
         </TextView>
